--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "brynhild",
+  "name": "My2048",
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "^0.4.1",
-    "grunt-open": "^0.2.3",
-    "grunt-contrib-connect": "^0.7.1",
     "connect-livereload": "^0.4.0",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.2",
     "connect-modrewrite": "^0.7.6",
+    "grunt": "^0.4.1",
     "grunt-connect-proxy": "^0.1.10",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-connect": "^0.7.1",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.5.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-open": "^0.2.3",
+    "load-grunt-tasks": "^0.4.0",
+    "time-grunt": "^0.3.2"
   },
   "engines": {
     "node": ">=0.10.0"
