--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-open": "^0.2.3",
+    "grunt-contrib-htmlmin": "~0.2.0",
+    "grunt-contrib-cssmin": "~0.9.0",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.2"
   },
